# gladia-captions

./: .gitignore  Cargo.toml  README.md  config.example.toml  delete-asrs.py  upload-captions.py
src/: main.rs
