[package]
name = "youtube-gladia-captions"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
symphonia = { version = "0.5.3", default-features = false, features = ["mkv", "flac"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.8"
walkdir = "2.4.0"
